--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: hackernews
+    command: ["postgres", "-c", "log_statement=all"]
     restart: always
 
   api:  
