--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,12 @@ uvicorn = "^0.27.1"
 sqlmodel = "^0.0.16"
 pydantic-settings = "^2.2.1"
 psycopg2-binary = "^2.9.9"
+email-validator = "^2.1.1"
+passlib = "^1.7.4"
+python-jose = "^3.3.0"
+python-multipart = "^0.0.9"
+pytest = "^8.0.2"
+alembic = "^1.13.1"
 
 [build-system]
 requires = ["poetry-core"]
